Add nicknames to script.js, change colors in style.css, add picture to website

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
 		<link rel='stylesheet' href='style.css' />
 		<script src='script.js' defer></script>
-		<title>Doodle Name Generator</title>
+		<title>Link Name Generator</title>
 	</head>
 	<body>
 		<div class='container'>
-			<div id='title'>Doodle Nickname Generator</div>
+			<div id='title'>Link Nickname Generator</div>
 			<div class='display'>
 				<div id='content'></div>
 			</div>
 			<button id='button'>Create Name</button>
 			<div id='photo'>
-				<img src='Aquarium.jpeg' />
+				<img src='wedding.jpg' />
 			</div>
-			<div id='dada'>Love, Dada</div>
+			<div id='dada'>Love, Uncle Ryan</div>
 		</div>
 	</body>
 </html>
